# cookiecutter-python-package-template

./: .editorconfig  .gitignore  LICENSE  README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.directory_name}}/{{ cookiecutter.repo_name }}/: __info__.py  __init__.py  __version__.py
